--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
         h1 { top: 10%; }
         h2 { top: 14%; }
 
-        #drawButton, #fortuneButton {
+        #fortuneButton {
             position: absolute;
             bottom: 15%;
             left: 50%;
+            width: 260px;
             transform: translateX(-50%);
             padding: 12px 32px;
             font-size: 1.2rem;
@@ -88,6 +89,7 @@
             left: 50%;
             transform: translateX(-50%);
             padding: 12px 24px;
+            width: 260px;
             font-size: 1.2rem;
             font-weight: 600;
             background-color: #ff9800;
@@ -107,7 +109,7 @@
 
         #fortuneResult {
             position: absolute;
-            top: 45%;
+            top: 40%;
             left: 50%;
             transform: translateX(-50%);
             font-size: 1.2rem;
@@ -117,7 +119,7 @@
             opacity: 0;
             background-color: white;
             padding: 20px;
-            border-radius: 0;
+            border-radius: 8px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.2);
             display: none;
         }
