--- a/index.html
+++ b/index.html
@@ -69,20 +69,6 @@
             background-color: #0E5B78;
         }
 
-        #lottiePlayer {
-            position: absolute;
-            top: 30%;
-            left: 50%;
-            transform: translateX(-50%);
-            display: none;
-            z-index: 100;
-            opacity: 1;
-            transition: opacity 0.3s ease;
-            border: none;
-            outline: none;
-            background: transparent;
-        }
-
         #shareButton {
             position: absolute;
             bottom: 23%;
@@ -114,12 +100,12 @@
             transform: translateX(-50%);
             font-size: 1.2rem;
             color: #333;
-            z-index: 15;
+            z-index: 115;
             text-align: center;
             opacity: 0;
             background-color: white;
             padding: 20px;
-            border-radius: 8px;
+            border-radius: 4px;
             box-shadow: 0 4px 15px rgba(0,0,0,0.2);
             display: none;
         }
@@ -143,7 +129,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: rgba(0, 0, 0, 0.85);
             z-index: 14;
             display: none;
         }
@@ -159,28 +145,56 @@
             }
         }
 
+        #lottiePlayer {
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translateX(-50%);
+            display: none;
+            z-index: 100;
+            opacity: 1;
+            transition: opacity 0.3s ease;
+            border: none;
+            outline: none;
+            background: transparent;
+        }
+
         #mainImage {
             position: absolute;
             top: 45%;
             left: 52%;
             transform: translate(-50%, -50%);
             z-index: 5;
-            width: 250px;
+            width: 300px;
             height: auto;
+        }
+        
+        #fortuneImage {
+            position: absolute;
+            top: 20%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 220px; /* 이미지 크기 조절 */
+            display: none; /* 초기에는 숨김 */
+            z-index: 100;
+            animation: fadeIn 1.5s ease forwards;
         }
     </style>
 </head>
 <body>
     <canvas id="spaceCanvas"></canvas>
-    <img id="mainImage" src="mainimage02.png" alt="Main Image">
-    <button id="shareButton">공유하고 한번 더</button>
     <h1>행운 메시지 뽑고</h1>
     <h2>긍정적인 하루를 시작해요</h2>
     <button id="drawButton"></button>
     <button id="fortuneButton">메시지 뽑기</button>
+    <button id="shareButton">공유하고 한번 더</button>
     <div id="fortuneResult"></div>
     <div id="remainingTime"></div>
     <div class="dim-overlay"></div>
+    <div id="fortuneResult"></div>
+
+    <img id="mainImage" src="mainimage02.png" alt="Main Image">
+    <img id="fortuneImage" src="fortune-result-img01.png" alt="행운 이미지">
     <iframe id="lottiePlayer" src="https://lottie.host/embed/8becdbdb-adca-46b9-8c68-50c6791472a2/RGyKarqPug.lottie" width="300" height="300"></iframe>
 
     <script>
@@ -281,7 +295,217 @@
     "💭 마음속 바람을 현실로 만들기 위한 노력을 시작하세요",
     "🧗 잠깐의 실패가 당신의 가치를 떨어뜨리지 않습니다",
     "🌍 평소와 다른 장소에서 새로운 영감을 얻어보세요",
-    "🚦 당신의 선택이 당신의 길을 밝힐 것입니다"
+    "🚦 당신의 선택이 당신의 길을 밝힐 것입니다",
+      "🌅 오늘은 기분 좋은 아침을 만들어 보세요.",
+    "🍀 작은 행운도 소중히 여기면 큰 행복이 됩니다.",
+    "🌼 웃음으로 하루를 시작하면 기적이 찾아옵니다.",
+    "✨ 당신은 오늘도 최고의 하루를 보낼 수 있어요.",
+    "🎯 목표를 향해 한 걸음 더 나아가 보세요.",
+    "🚶‍♀️ 가벼운 산책이 머릿속을 맑게 해줄 거예요.",
+    "💫 오늘도 당신은 충분히 멋진 사람입니다.",
+    "🧘‍♀️ 마음의 여유를 가지고 오늘을 시작하세요.",
+    "🌟 작은 성공이 큰 꿈의 시작입니다.",
+    "🌈 오늘은 당신이 원하는 대로 모든 일이 풀릴 거예요.",
+    "💌 당신의 노력은 반드시 보답받을 거예요.",
+    "🎈 가볍게 마음을 비우고 새로운 하루를 맞이하세요.",
+    "🕰️ 오늘은 시간을 더 소중히 여겨보세요.",
+    "🌞 밝은 에너지가 오늘 하루를 채워줄 거예요.",
+    "🧡 당신의 진가는 오늘 더 빛날 것입니다.",
+    "🌻 오늘은 평소보다 더 많이 웃어보세요.",
+    "🎁 오늘은 인생이 주는 특별한 선물을 받을 거예요.",
+    "🚀 새로운 도전은 언제나 당신을 성장시킵니다.",
+    "🌱 오늘 심은 씨앗이 내일의 꽃으로 피어날 거예요.",
+    "🌊 흐르는 물처럼 마음을 편안하게 가져보세요.",
+    "🎶 좋아하는 음악과 함께 하루를 시작해보세요.",
+    "📖 오늘의 작은 배움이 큰 지혜로 이어질 거예요.",
+    "🏃‍♀️ 건강한 몸과 마음이 최고의 행운입니다.",
+    "🎨 오늘은 창의력이 빛나는 날이에요.",
+    "🙏 감사한 마음이 더 큰 행복을 불러올 거예요.",
+    "🤗 오늘도 주변 사람들에게 따뜻함을 나눠보세요.",
+    "💭 당신의 생각이 현실이 될 수 있습니다.",
+    "🛤️ 새로운 길을 걸어보면 더 많은 기회가 보입니다.",
+    "💪 지금 이 순간도 당신은 강해지고 있습니다.",
+    "🌸 마음을 편히 하고 천천히 가도 괜찮아요.",
+    "🎉 오늘은 행복의 이유를 찾아보세요.",
+    "🚪 문득 찾아온 기회를 놓치지 마세요.",
+    "🧗‍♂️ 당신이 올라갈 산은 준비되어 있습니다.",
+    "🌟 오늘도 당신은 누군가의 귀감이 될 거예요.",
+    "📆 오늘을 후회 없이 살아보세요.",
+    "🔑 성공의 열쇠는 당신 손 안에 있습니다.",
+    "🏖️ 잠시 휴식이 내일의 에너지를 채워줄 거예요.",
+    "🍵 따뜻한 차 한 잔으로 마음의 여유를 가져보세요.",
+    "🌞 오늘은 당신에게 반짝이는 하루가 될 거예요.",
+    "🎨 당신의 하루를 원하는 색으로 칠해보세요.",
+    "🌿 나를 위한 시간을 잠시 가져보세요.",
+    "🚦 어려운 상황에서도 당신의 길은 열릴 거예요.",
+    "📢 오늘은 긍정적인 말을 스스로에게 건네보세요.",
+    "🗝️ 오늘은 열려 있는 기회를 잡아보세요.",
+    "🔮 당신에게 특별한 일이 기다리고 있습니다.",
+    "🧡 나 자신을 믿는 순간 모든 게 가능해집니다.",
+    "🎈 가볍게 웃으며 오늘을 맞이하세요.",
+    "🌠 오늘의 작은 꿈이 미래의 별이 될 거예요.",
+    "🧭 마음이 가는 방향으로 한 걸음 내디뎌 보세요.",
+    "🍃 바람처럼 자유롭게 하루를 즐겨보세요.",
+    "⏳ 인내하면 언젠가 좋은 일이 찾아옵니다.",
+    "💐 당신의 하루에 꽃이 가득 피어나길 바랍니다.",
+    "🔔 오늘은 특별한 기회가 찾아올 거예요.",
+    "🤝 작은 친절이 세상을 따뜻하게 만듭니다.",
+    "📜 오늘은 당신의 이야기를 새롭게 써 내려가세요.",
+    "🍂 새로운 계절처럼 오늘을 새롭게 시작하세요.",
+    "🌸 작은 변화가 당신을 더 빛나게 할 거예요.",
+    "🕊️ 평온한 하루를 보내며 행복을 찾아보세요.",
+    "🌟 당신은 오늘도 반짝이고 있습니다.",
+    "🎶 즐거운 리듬으로 하루를 시작해보세요.",
+    "🌊 파도가 밀려오듯 행운도 찾아올 거예요.",
+    "🪄 오늘은 마법처럼 모든 일이 잘 풀릴 거예요.",
+    "🧘 마음의 안정을 찾으면 모든 일이 해결됩니다.",
+    "📚 책 속의 지혜가 당신의 길을 비출 거예요.",
+    "💖 사랑과 행복이 가득한 하루를 보내세요.",
+    "🌤️ 오늘의 작은 햇살도 당신을 비추고 있습니다.",
+    "🎯 목표에 집중하면 더 큰 힘이 생길 거예요.",
+    "🚲 천천히 가도 괜찮습니다. 멈추지만 않으면 돼요.",
+    "🌻 오늘은 당신이 원하는 날이 될 거예요.",
+    "💌 당신의 진심은 반드시 전해질 거예요.",
+    "⛰️ 오늘도 당신은 도전할 준비가 되어 있어요.",
+    "🌺 모든 순간이 아름답게 피어나길 바랍니다.",
+    "💫 당신에게 필요한 것은 이미 준비되어 있어요.",
+    "🌎 오늘은 세상이 당신에게 미소 지을 거예요.",
+    "🪴 오늘의 작은 성장도 축하해보세요.",
+    "🎵 오늘은 당신만의 리듬을 만들어 보세요.",
+    "🌱 천천히 자라나는 나를 믿어보세요.",
+    "✨ 당신의 하루가 빛으로 가득 차길 바랍니다.",
+    "🏆 오늘의 노력은 미래의 성공으로 이어질 거예요.",
+    "🌟 당신은 언제나 최고의 하루를 만들 수 있어요.",
+    "🍉 오늘은 가볍게 쉬어가도 괜찮아요.",
+    "🌙 하루의 끝에는 작은 성취를 돌아보세요.",
+    "🌞 당신의 밝은 에너지가 세상을 바꿀 거예요.",
+    "🗓️ 오늘 하루는 선물처럼 여겨보세요.",
+    "🏡 당신에게 편안한 하루가 찾아올 거예요.",
+    "🧭 당신이 가는 길은 언제나 옳습니다.",
+    "💌 오늘도 당신은 충분히 소중한 존재입니다.",
+    "🎀 모든 순간을 특별하게 만들어 보세요.",
+    "🌈 오늘 하루도 행복으로 채워지길 바랍니다.",
+    "🔑 당신의 마음이 문을 열면 행운이 찾아올 거예요.",
+    "🌹 오늘은 당신에게 멋진 기회가 찾아올 거예요.",
+    "💎 당신은 언제나 빛나는 존재입니다.",
+    "🏖️ 여유롭게 흘러가는 시간을 즐겨보세요.",
+    "🍁 작은 것에서 행복을 찾아보세요.",
+    "🌻 오늘의 행복이 내일의 기적을 만듭니다.",
+    "🛤️ 새로운 길이 당신을 기다리고 있습니다.",
+    "🌟 지금 이 순간을 소중히 여겨보세요.",
+    "🎊 오늘은 당신에게 축복이 가득한 날입니다.",
+    "🪄 긍정의 마음이 기적을 가져올 거예요.",
+    "💭 오늘도 당신의 생각이 현실로 이루어질 거예요.",
+    "🌟 당신은 더 나아가고, 더 빛날 수 있습니다.",
+    "🧘‍♂️ 마음을 비우면 더 많은 것이 들어옵니다.",
+    "🎈 오늘은 당신의 하루를 특별하게 만들어 보세요.",
+    "🌞 밝게 빛나는 당신을 응원합니다!",
+    "🙏 지금 이 순간도 축복받은 시간입니다.",
+    "🌅 오늘은 기분 좋은 아침을 만들어 보세요.",
+    "🍀 작은 행운도 소중히 여기면 큰 행복이 됩니다.",
+    "🌼 웃음으로 하루를 시작하면 기적이 찾아옵니다.",
+    "✨ 당신은 오늘도 최고의 하루를 보낼 수 있어요.",
+    "🎯 목표를 향해 한 걸음 더 나아가 보세요.",
+    "🚶‍♀️ 가벼운 산책이 머릿속을 맑게 해줄 거예요.",
+    "💫 오늘도 당신은 충분히 멋진 사람입니다.",
+    "🧘‍♀️ 마음의 여유를 가지고 오늘을 시작하세요.",
+    "🌟 작은 성공이 큰 꿈의 시작입니다.",
+    "🌈 오늘은 당신이 원하는 대로 모든 일이 풀릴 거예요.",
+    "💌 당신의 노력은 반드시 보답받을 거예요.",
+    "🎈 가볍게 마음을 비우고 새로운 하루를 맞이하세요.",
+    "🕰️ 오늘은 시간을 더 소중히 여겨보세요.",
+    "🌞 밝은 에너지가 오늘 하루를 채워줄 거예요.",
+    "🧡 당신의 진가는 오늘 더 빛날 것입니다.",
+    "🌻 오늘은 평소보다 더 많이 웃어보세요.",
+    "🎁 오늘은 인생이 주는 특별한 선물을 받을 거예요.",
+    "🚀 새로운 도전은 언제나 당신을 성장시킵니다.",
+    "🌱 오늘 심은 씨앗이 내일의 꽃으로 피어날 거예요.",
+    "🌊 흐르는 물처럼 마음을 편안하게 가져보세요.",
+    "🎶 좋아하는 음악과 함께 하루를 시작해보세요.",
+    "📖 오늘의 작은 배움이 큰 지혜로 이어질 거예요.",
+    "🏃‍♀️ 건강한 몸과 마음이 최고의 행운입니다.",
+    "🎨 오늘은 창의력이 빛나는 날이에요.",
+    "🙏 감사한 마음이 더 큰 행복을 불러올 거예요.",
+    "🤗 오늘도 주변 사람들에게 따뜻함을 나눠보세요.",
+    "💭 당신의 생각이 현실이 될 수 있습니다.",
+    "🛤️ 새로운 길을 걸어보면 더 많은 기회가 보입니다.",
+    "💪 지금 이 순간도 당신은 강해지고 있습니다.",
+    "🌸 마음을 편히 하고 천천히 가도 괜찮아요.",
+    "🎉 오늘은 행복의 이유를 찾아보세요.",
+    "🚪 문득 찾아온 기회를 놓치지 마세요.",
+    "🧗‍♂️ 당신이 올라갈 산은 준비되어 있습니다.",
+    "🌟 오늘도 당신은 누군가의 귀감이 될 거예요.",
+    "📆 오늘을 후회 없이 살아보세요.",
+    "🔑 성공의 열쇠는 당신 손 안에 있습니다.",
+    "🏖️ 잠시 휴식이 내일의 에너지를 채워줄 거예요.",
+    "🍵 따뜻한 차 한 잔으로 마음의 여유를 가져보세요.",
+    "🌞 오늘은 당신에게 반짝이는 하루가 될 거예요.",
+    "🎨 당신의 하루를 원하는 색으로 칠해보세요.",
+    "🌿 나를 위한 시간을 잠시 가져보세요.",
+    "🚦 어려운 상황에서도 당신의 길은 열릴 거예요.",
+    "📢 오늘은 긍정적인 말을 스스로에게 건네보세요.",
+    "🗝️ 오늘은 열려 있는 기회를 잡아보세요.",
+    "🔮 당신에게 특별한 일이 기다리고 있습니다.",
+    "🧡 나 자신을 믿는 순간 모든 게 가능해집니다.",
+    "🎈 가볍게 웃으며 오늘을 맞이하세요.",
+    "🌠 오늘의 작은 꿈이 미래의 별이 될 거예요.",
+    "🧭 마음이 가는 방향으로 한 걸음 내디뎌 보세요.",
+    "🍃 바람처럼 자유롭게 하루를 즐겨보세요.",
+    "⏳ 인내하면 언젠가 좋은 일이 찾아옵니다.",
+    "💐 당신의 하루에 꽃이 가득 피어나길 바랍니다.",
+    "🔔 오늘은 특별한 기회가 찾아올 거예요.",
+    "🤝 작은 친절이 세상을 따뜻하게 만듭니다.",
+    "📜 오늘은 당신의 이야기를 새롭게 써 내려가세요.",
+    "🍂 새로운 계절처럼 오늘을 새롭게 시작하세요.",
+    "🌸 작은 변화가 당신을 더 빛나게 할 거예요.",
+    "🕊️ 평온한 하루를 보내며 행복을 찾아보세요.",
+    "🌟 당신은 오늘도 반짝이고 있습니다.",
+    "🎶 즐거운 리듬으로 하루를 시작해보세요.",
+    "🌊 파도가 밀려오듯 행운도 찾아올 거예요.",
+    "🪄 오늘은 마법처럼 모든 일이 잘 풀릴 거예요.",
+    "🧘 마음의 안정을 찾으면 모든 일이 해결됩니다.",
+    "📚 책 속의 지혜가 당신의 길을 비출 거예요.",
+    "💖 사랑과 행복이 가득한 하루를 보내세요.",
+    "🌤️ 오늘의 작은 햇살도 당신을 비추고 있습니다.",
+    "🎯 목표에 집중하면 더 큰 힘이 생길 거예요.",
+    "🚲 천천히 가도 괜찮습니다. 멈추지만 않으면 돼요.",
+    "🌻 오늘은 당신이 원하는 날이 될 거예요.",
+    "💌 당신의 진심은 반드시 전해질 거예요.",
+    "⛰️ 오늘도 당신은 도전할 준비가 되어 있어요.",
+    "🌺 모든 순간이 아름답게 피어나길 바랍니다.",
+    "💫 당신에게 필요한 것은 이미 준비되어 있어요.",
+    "🌎 오늘은 세상이 당신에게 미소 지을 거예요.",
+    "🪴 오늘의 작은 성장도 축하해보세요.",
+    "🎵 오늘은 당신만의 리듬을 만들어 보세요.",
+    "🌱 천천히 자라나는 나를 믿어보세요.",
+    "✨ 당신의 하루가 빛으로 가득 차길 바랍니다.",
+    "🏆 오늘의 노력은 미래의 성공으로 이어질 거예요.",
+    "🌟 당신은 언제나 최고의 하루를 만들 수 있어요.",
+    "🍉 오늘은 가볍게 쉬어가도 괜찮아요.",
+    "🌙 하루의 끝에는 작은 성취를 돌아보세요.",
+    "🌞 당신의 밝은 에너지가 세상을 바꿀 거예요.",
+    "🗓️ 오늘 하루는 선물처럼 여겨보세요.",
+    "🏡 당신에게 편안한 하루가 찾아올 거예요.",
+    "🧭 당신이 가는 길은 언제나 옳습니다.",
+    "💌 오늘도 당신은 충분히 소중한 존재입니다.",
+    "🎀 모든 순간을 특별하게 만들어 보세요.",
+    "🌈 오늘 하루도 행복으로 채워지길 바랍니다.",
+    "🔑 당신의 마음이 문을 열면 행운이 찾아올 거예요.",
+    "🌹 오늘은 당신에게 멋진 기회가 찾아올 거예요.",
+    "💎 당신은 언제나 빛나는 존재입니다.",
+    "🏖️ 여유롭게 흘러가는 시간을 즐겨보세요.",
+    "🍁 작은 것에서 행복을 찾아보세요.",
+    "🌻 오늘의 행복이 내일의 기적을 만듭니다.",
+    "🛤️ 새로운 길이 당신을 기다리고 있습니다.",
+    "🌟 지금 이 순간을 소중히 여겨보세요.",
+    "🎊 오늘은 당신에게 축복이 가득한 날입니다.",
+    "🪄 긍정의 마음이 기적을 가져올 거예요.",
+    "💭 오늘도 당신의 생각이 현실로 이루어질 거예요.",
+    "🌟 당신은 더 나아가고, 더 빛날 수 있습니다.",
+    "🧘‍♂️ 마음을 비우면 더 많은 것이 들어옵니다.",
+    "🎈 오늘은 당신의 하루를 특별하게 만들어 보세요.",
+    "🌞 밝게 빛나는 당신을 응원합니다!",
+    "🙏 지금 이 순간도 축복받은 시간입니다."
 ];
 
         let hasShared = false;
@@ -407,6 +631,7 @@
             const lottiePlayer = document.getElementById('lottiePlayer');
             const shareButton = document.getElementById('shareButton');
             const fortuneButton = document.getElementById('fortuneButton');
+            const fortuneImage = document.getElementById('fortuneImage');
 
             // 공유 버튼 숨기기
             shareButton.style.display = 'none';
@@ -419,6 +644,7 @@
             setTimeout(() => {
                 lottiePlayer.style.display = 'none';
                 fortuneResult.style.display = 'block';
+                fortuneImage.style.display = 'block';
                 fortuneResult.textContent = randomFortune;
                 fortuneResult.style.animation = "fadeIn 2s ease forwards";
 
