--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="럭키스팟에서 오늘의 행운 메시지를 뽑아보세요! 매일매일 행운을 높여주는 긍정적인 메시지를 뽑아보아요">
+    <meta name="description" content="행운 메시지 뽑고 긍정적인 하루 시작!">
     <meta name="keywords" content="럭키스팟, 행운 메시지, 운세, 럭키스팟, 오늘의 운세, 긍정적인 메시지">
     <meta name="author" content="카페 럭키스팟">
-    <meta property="og:title" content="럭키스팟 - 오늘의 행운 메시지">
-    <meta property="og:description" content="매일 새로운 행운의 메시지를 뽑고 긍정적인 에너지를 얻어가세요.">
+    <meta property="og:title" content="럭키스팟 - 오늘의 행운 메시지 뽑기">
+    <meta property="og:description" content="행운 메시지 뽑고 긍정적인 하루 시작!">
     <meta property="og:image" content="og-img.png">
     <meta property="og:url" content="https://luckyspotdraw.online">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="럭키스팟 - 오늘의 행운 메시지">
+    <meta name="twitter:title" content="럭키스팟 - 오늘의 행운 메시지 뽑기">
     <meta name="twitter:description" content="오늘의 운세를 뽑고 긍정적인 하루를 시작하세요.">
     <meta name="twitter:image" content="og-img.png">
     <title>럭키스팟 - 오늘의 행운 메시지 뽑기</title>
@@ -34,6 +34,7 @@
         }
 
         h1, h2 {
+            visibility: hidden;
             position: absolute;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -51,7 +52,7 @@
             position: absolute;
             bottom: 15%;
             left: 50%;
-            width: 260px;
+            width: 230px;
             transform: translateX(-50%);
             padding: 12px 32px;
             font-size: 1.2rem;
@@ -75,7 +76,7 @@
             left: 50%;
             transform: translateX(-50%);
             padding: 12px 24px;
-            width: 260px;
+            width: 230px;
             font-size: 1.2rem;
             font-weight: 600;
             background-color: #ff9800;
@@ -97,6 +98,7 @@
             position: absolute;
             top: 40%;
             left: 50%;
+            min-width: 260px;
             transform: translateX(-50%);
             font-size: 1.2rem;
             color: #333;
@@ -151,7 +153,7 @@
             left: 50%;
             transform: translateX(-50%);
             display: none;
-            z-index: 100;
+            z-index: 200;
             opacity: 1;
             transition: opacity 0.3s ease;
             border: none;
