--- a/index.html
+++ b/index.html
@@ -193,30 +193,23 @@
             animation: fadeIn 1.5s ease forwards;
         }
 
-        /* 푸터 아이콘 스타일 */
         #instagramImage {
             position: fixed;
             background-color: white;
             padding: 10px;
             border-radius: 80px;
-            /* 고정된 위치 */
             top: 20px;
-            /* 화면 상단에서 20px */
             right: 20px;
-            /* 화면 우측에서 20px */
             width: 20px;
-            /* 아이콘 크기 */
             height: auto;
             cursor: pointer;
             transition: transform 0.2s ease, opacity 0.3s ease;
-            /* 클릭 애니메이션 */
             z-index: 1000;
             opacity: 0.7;
         }
 
         #instagramImage:hover {
             transform: scale(1.1);
-            /* 아이콘 확대 효과 */
             opacity: 0.9;
         }
 
@@ -225,23 +218,21 @@
             background-color: white;
             padding: 10px;
             border-radius: 80px;
-            /* 고정된 위치 */
             top: 70px;
-            /* 화면 상단에서 20px */
             right: 20px;
-            /* 화면 우측에서 20px */
             width: 20px;
-            /* 아이콘 크기 */
             height: auto;
             cursor: pointer;
             transition: transform 0.2s ease, opacity 0.3s ease;
-            /* 클릭 애니메이션 */
             z-index: 1000;
             opacity: 0.7;
-            /* 다른 요소 위에 표시 */
-            s
+
         }
 
+        #blogImage:hover {
+            transform: scale(1.1);
+            opacity: 1.0;
+        }
         #blogImage:hover {
             transform: scale(1.1);
             opacity: 1.0;
@@ -252,7 +243,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 60px;
+            height: 40px;
             background-color: #333;
             color: white;
             display: flex;
@@ -301,6 +292,12 @@
         </a>
     </div>
 
+    <!--우측 상단 플로팅 ic. 외부로 이동-->
+    <a href="https://www.instagram.com/luckyspot.kr" onclick="window.open(this.href, '_blank'); return false;">
+        <img id="instagramImage" src="Name=logoInstagram.svg" alt="instagramImage"></a>
+    <a href="https://www.luckyspot.in" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
+        <img id="blogImage" src="Name=home.svg" alt="Blog Icon"></a>
+
 
     <img id="mainImage" src="main-image-03.png" alt="Main Image">
     <img id="fortuneImage" src="fortune-result-img01.png" alt="행운 이미지">
@@ -308,12 +305,6 @@
     <!--로띠 임베디드 url-->
     <iframe id="lottiePlayer" src="https://lottie.host/embed/8becdbdb-adca-46b9-8c68-50c6791472a2/RGyKarqPug.lottie"
         width="300" height="300"></iframe>
-
-    <!--우측 상단 플로팅 ic. 외부로 이동-->
-    <a href="https://www.instagram.com/luckyspot.kr" onclick="window.open(this.href, '_blank'); return false;">
-        <img id="instagramImage" src="Name=logoInstagram.svg" alt="instagramImage"></a>
-    <a href="https://www.luckyspot.in" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
-        <img id="blogImage" src="Name=home.svg" alt="Blog Icon"></a>
 
 
 
