--- a/down.html
+++ b/down.html
@@ -163,14 +163,12 @@
             <!-- 첫 번째 콘텐츠 -->
             <div class="card">
                 <img src="bg-pangi-merrychristmas.jpg" alt="배경화면 1">
-                <a href="https://drive.google.com/file/d/1ZnP8iWovvDN6_Lh1eBsj9C8Gt_a6u_gL/view"
-                    download="bg-pangi-santa-1.jpg" class="download-btn">이미지 다운로드</a>
+                <a href="bg-pangi-merrychristmas.jpg" download="bg-pangi-merrychristmas.jpg" class="download-btn">이미지 다운로드</a>
             </div>
             <!-- 두 번째 콘텐츠 -->
             <div class="card">
                 <img src="bg-pangi-santa.jpg" alt="배경화면 2">
-                <a href="https://drive.google.com/file/d/1BWivO5mZvp4zMp5QJmZ-HuWZ7jD38krT/view"
-                    download="bg-pangi-santa-2.jpg" class="download-btn">이미지 다운로드</a>
+                <a href="bg-pangi-santa.jpg" download="bg-pangi-santa.jpg" class="download-btn">이미지 다운로드</a>
             </div>
         </div>
     </div>
