--- a/down.html
+++ b/down.html
@@ -29,11 +29,20 @@
             padding: 20px;
         }
 
-        h1 {
-            font-size: 1.5rem;
-            font-weight: 500;
+        h2,
+        h3 {
+            font-size: 1.2rem;
+            font-weight: 400;
             color: #333;
-            margin-bottom: 30px;
+            gap: 4px;
+        }
+
+        h2 {
+            top: 10%;
+        }
+
+        h3 {
+            top: 12%;
         }
 
         .container {
@@ -158,37 +167,42 @@
 
 <body>
     <div class="wrapper">
-        <h1>스마트폰 배경화면 다운로드</h1>
+        <h2>이미지를 1초 정도 꾹~</h2>
+        <h3>눌러도 다운로드 가능해요</h3>
         <div class="container">
             <!-- 첫 번째 콘텐츠 -->
             <div class="card">
                 <img src="bg-pangi-merrychristmas.jpg" alt="배경화면 1">
-                <a href="bg-pangi-merrychristmas.jpg" download="bg-pangi-merrychristmas.jpg" class="download-btn">이미지 다운로드</a>
+                <a href="bg-pangi-merrychristmas.jpg" download="bg-pangi-merrychristmas.jpg" class="download-btn">이미지
+                    다운로드</a>
             </div>
             <!-- 두 번째 콘텐츠 -->
             <div class="card">
                 <img src="bg-pangi-santa.jpg" alt="배경화면 2">
                 <a href="bg-pangi-santa.jpg" download="bg-pangi-santa.jpg" class="download-btn">이미지 다운로드</a>
             </div>
+            <!-- 세 번째 콘텐츠 -->
+            <div class="card">
+                <img src="bg-pangi-hny.png" alt="배경화면 3">
+                <a href="bg-pangi-hny.png" download="bg-pangi-hny.png" class="download-btn">이미지 다운로드</a>
+            </div>
         </div>
-    </div>
 
-    <!-- Sticky 하단 네비게이션 바 -->
-    <div class="nav-bar">
-        <a href="down.html" target="_self">
-            <i class="fa-solid fa-circle-arrow-down" alt="nav-icon"></i> 배경화면 다운
-        </a>
-        <a href="index.html" target="_self">
-            <i class="fa-solid fa-gift" alt="nav-icon"></i> 매일 행운뽑기
-        </a>
-    </div>
+        <!-- Sticky 하단 네비게이션 바 -->
+        <div class="nav-bar">
+            <a href="down.html" target="_self">
+                <i class="fa-solid fa-circle-arrow-down" alt="nav-icon"></i> 배경화면 다운
+            </a>
+            <a href="index.html" target="_self">
+                <i class="fa-solid fa-gift" alt="nav-icon"></i> 매일 행운뽑기
+            </a>
+        </div>
 
-    <!--우측 상단 플로팅 ic. 외부로 이동-->
-    <a href="https://www.instagram.com/luckyspot.kr" onclick="window.open(this.href, '_blank'); return false;">
-        <img id="instagramImage" src="Name=logoInstagram.svg" alt="instagramImage"></a>
-    <a href="https://www.luckyspot.in" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
-        <img id="blogImage" src="Name=home.svg" alt="Blog Icon"></a>
-
+        <!--우측 상단 플로팅 ic. 외부로 이동-->
+        <a href="https://www.instagram.com/luckyspot.kr" onclick="window.open(this.href, '_blank'); return false;">
+            <img id="instagramImage" src="Name=logoInstagram.svg" alt="instagramImage"></a>
+        <a href="https://www.luckyspot.in" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
+            <img id="blogImage" src="Name=home.svg" alt="Blog Icon"></a>
 
 </body>
 
