--- a/down.html
+++ b/down.html
@@ -125,10 +125,10 @@
         #instagramImage {
             position: fixed;
             background-color: #d9d9d9;
-            padding: 10px;
+            padding: 12px;
             border-radius: 80px;
-            top: 20px;
-            right: 20px;
+            top: 35%;
+            right: 16px;
             width: 20px;
             height: auto;
             cursor: pointer;
@@ -145,10 +145,10 @@
         #blogImage {
             position: fixed;
             background-color: #d9d9d9;
-            padding: 10px;
+            padding: 12px;
             border-radius: 80px;
-            top: 70px;
-            right: 20px;
+            top: 40%;
+            right: 16px;
             width: 20px;
             height: auto;
             cursor: pointer;
