--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             left: 52%;
             transform: translate(-50%, -50%);
             z-index: 5;
-            width: 300px;
+            width: 350px;
             height: auto;
         }
 
@@ -193,13 +193,14 @@
             animation: fadeIn 1.5s ease forwards;
         }
 
+        /* 푸터 아이콘 스타일 */
         #instagramImage {
             position: fixed;
-            background-color: white;
-            padding: 10px;
+            background-color: #d9d9d9;
+            padding: 12px;
             border-radius: 80px;
-            top: 20px;
-            right: 20px;
+            top: 34%;
+            right: 16px;
             width: 20px;
             height: auto;
             cursor: pointer;
@@ -215,11 +216,11 @@
 
         #blogImage {
             position: fixed;
-            background-color: white;
-            padding: 10px;
+            background-color: #d9d9d9;
+            padding: 12px;
             border-radius: 80px;
-            top: 70px;
-            right: 20px;
+            top: 40%;
+            right: 16px;
             width: 20px;
             height: auto;
             cursor: pointer;
@@ -229,10 +230,6 @@
 
         }
 
-        #blogImage:hover {
-            transform: scale(1.1);
-            opacity: 1.0;
-        }
         #blogImage:hover {
             transform: scale(1.1);
             opacity: 1.0;
