--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         #fortuneButton {
             position: absolute;
-            bottom: 25%;
+            bottom: 22%;
             left: 50%;
             width: 230px;
             transform: translateX(-50%);
@@ -79,9 +79,10 @@
 
         #shareButton {
             position: absolute;
-            bottom: 33%;
+            bottom: 28%;
             left: 50%;
             transform: translateX(-50%);
+            margin-bottom: 8px;
             padding: 12px 24px;
             width: 230px;
             font-size: 1.2rem;
@@ -122,7 +123,7 @@
 
         #remainingTime {
             position: absolute;
-            top: 78%;
+            bottom: 15%;
             left: 50%;
             transform: translateX(-50%);
             font-size: 1rem;
@@ -158,7 +159,7 @@
 
         #lottiePlayer {
             position: absolute;
-            top: 25%;
+            top: 20%;
             left: 50%;
             transform: translateX(-50%);
             display: none;
@@ -176,7 +177,7 @@
             left: 52%;
             transform: translate(-50%, -50%);
             z-index: 5;
-            width: 350px;
+            width: 330px;
             height: auto;
         }
 
@@ -199,7 +200,7 @@
             background-color: #d9d9d9;
             padding: 12px;
             border-radius: 80px;
-            top: 34%;
+            top: 30px;
             right: 16px;
             width: 20px;
             height: auto;
@@ -219,7 +220,7 @@
             background-color: #d9d9d9;
             padding: 12px;
             border-radius: 80px;
-            top: 40%;
+            top: 80px;
             right: 16px;
             width: 20px;
             height: auto;
