--- a/down.html
+++ b/down.html
@@ -122,45 +122,51 @@
         }
 
         /* 푸터 아이콘 스타일 */
-        #instagramImage {
-            position: fixed;
-            background-color: #d9d9d9;
-            padding: 12px;
-            border-radius: 80px;
-            top: 35%;
-            right: 16px;
-            width: 20px;
-            height: auto;
+        #fortuneButton {
+            position: absolute;
+            bottom: 22%;
+            left: 50%;
+            width: 230px;
+            transform: translateX(-50%);
+            padding: 12px 32px;
+            font-size: 1.2rem;
+            font-weight: 600;
+            background-color: #33C6FF;
+            color: white;
+            border: none;
+            border-radius: 60px;
+            z-index: 50;
             cursor: pointer;
-            transition: transform 0.2s ease, opacity 0.3s ease;
-            z-index: 1000;
-            opacity: 0.7;
+            transition: background-color 0.3s ease;
         }
 
-        #instagramImage:hover {
-            transform: scale(1.1);
-            opacity: 0.9;
+        #fortuneButton:hover {
+            background-color: #0E5B78;
         }
 
-        #blogImage {
-            position: fixed;
-            background-color: #d9d9d9;
-            padding: 12px;
-            border-radius: 80px;
-            top: 40%;
-            right: 16px;
-            width: 20px;
-            height: auto;
+        #shareButton {
+            position: absolute;
+            bottom: 28%;
+            left: 50%;
+            transform: translateX(-50%);
+            margin-bottom: 8px;
+            padding: 12px 24px;
+            width: 230px;
+            font-size: 1.2rem;
+            font-weight: 600;
+            background-color: #ff9800;
+            color: white;
+            border: none;
+            border-radius: 60px;
             cursor: pointer;
-            transition: transform 0.2s ease, opacity 0.3s ease;
-            z-index: 1000;
-            opacity: 0.7;
-
+            z-index: 50;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            justify-items: center;
+            transition: background-color 0.3s ease;
         }
 
-        #blogImage:hover {
-            transform: scale(1.1);
-            opacity: 1.0;
+        #shareButton:hover {
+            background-color: #f57c00;
         }
     </style>
 </head>
