--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LP Player with SVG Buttons</title>
+    <title>LUCKYSPOT LP Player</title>
     <style>
         @font-face {
             font-family: 'Pretendard';
