--- a/music.html
+++ b/music.html
@@ -118,6 +118,7 @@
             align-items: center;
             justify-content: center;
             filter: brightness(0) invert(0.95);
+            /* SVG color set to white */
             transition: transform 0.2s ease-in-out;
         }
 
@@ -148,6 +149,10 @@
             animation: twinkle 1s infinite ease-in-out;
         }
 
+        iframe {
+            display: none;
+        }
+
         @keyframes spin {
             from {
                 transform: rotate(0deg);
@@ -159,7 +164,9 @@
         }
 
         @keyframes twinkle {
-            0%, 100% {
+
+            0%,
+            100% {
                 opacity: 0.5;
             }
 
@@ -198,25 +205,120 @@
         </div>
     </div>
 
-    <!-- Placeholder for Footer -->
-    <div id="footer-placeholder"></div>
+    <!-- SoundCloud Iframe -->
+    <iframe id="soundCloudPlayer" width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1857951750&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=false"></iframe>
 
+    <!-- SoundCloud Widget API -->
     <script src="https://w.soundcloud.com/player/api.js"></script>
     <script>
-        // Load footer HTML and CSS
-        const footerHtmlUrl = "https://raw.githubusercontent.com/username/repository/branch/footer.html";
-        const footerCssUrl = "https://raw.githubusercontent.com/username/repository/branch/footer.css";
+        
+        const record = document.getElementById('record');
+        const lpStick = document.getElementById('lpStick');
+        const soundCloudPlayer = document.getElementById('soundCloudPlayer');
+        const progressBar = document.getElementById('progressBar');
+        const playPauseIcon = document.getElementById('playPauseIcon');
+        const trackTitle = document.getElementById('trackTitle');
+        const starsContainer = document.getElementById('stars');
+        let isPlaying = false;
 
-        fetch(footerHtmlUrl)
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById("footer-placeholder").innerHTML = data;
-                const linkElement = document.createElement("link");
-                linkElement.rel = "stylesheet";
-                linkElement.href = footerCssUrl;
-                document.head.appendChild(linkElement);
-            })
-            .catch(error => console.error("Error loading footer:", error));
+        const tracks = [
+            {
+                title: 'Cloudybay - Empty',
+                url: 'https://api.soundcloud.com/tracks/1857951750',
+            },
+            {
+                title: 'Christmas Playlist by Luckyspot',
+                url: 'https://api.soundcloud.com/playlists/1681986306',
+            },
+            {
+                title: 'Merry Christmas Playlist by 초별',
+                url: 'https://api.soundcloud.com/playlists/1704750675',
+            },
+            {
+                title: 'Last Christmas - Paris Music',
+                url: 'https://api.soundcloud.com/tracks/326661921',
+            },
+            {
+                title: '크리스마스 재즈 모음 🎄 - by 장윤지',
+                url: 'https://api.soundcloud.com/playlists/1713072231',
+            },
+        ];
+
+
+        let currentTrackIndex = 0;
+
+        // Initialize SoundCloud Widget
+        const widget = SC.Widget(soundCloudPlayer);
+
+        // Generate Twinkling Stars
+        function generateStars() {
+            for (let i = 0; i < 200; i++) {
+                const star = document.createElement('div');
+                star.className = 'star';
+                star.style.top = `${Math.random() * 100}vh`;
+                star.style.left = `${Math.random() * 100}vw`;
+                star.style.animationDelay = `${Math.random() * 2}s`;
+                starsContainer.appendChild(star);
+            }
+        }
+        generateStars();
+
+        // Toggle play/pause and control LP animation
+        function togglePlay() {
+            widget.isPaused(function (paused) {
+                if (!paused) {
+                    record.style.animationPlayState = 'paused';
+                    lpStick.style.transform = 'rotate(0deg)';
+                    widget.pause();
+                    playPauseIcon.src = 'play-solid.svg';
+                } else {
+                    lpStick.style.transform = 'rotate(-18deg)';
+                    setTimeout(() => {
+                        record.style.animationPlayState = 'running';
+                        widget.play();
+                        startProgress();
+                    }, 800);
+                    playPauseIcon.src = 'pause-solid.svg';
+                }
+                isPlaying = !isPlaying;
+            });
+        }
+
+        // Play next track
+        function playNextTrack() {
+            currentTrackIndex = (currentTrackIndex + 1) % tracks.length;
+            const nextTrack = tracks[currentTrackIndex];
+            widget.load(nextTrack.url, {
+                auto_play: true,
+            });
+            trackTitle.textContent = nextTrack.title;
+            progressBar.style.width = '0%';
+        }
+
+        // Play previous track
+        function playPreviousTrack() {
+            currentTrackIndex =
+                (currentTrackIndex - 1 + tracks.length) % tracks.length;
+            const prevTrack = tracks[currentTrackIndex];
+            widget.load(prevTrack.url, {
+                auto_play: true,
+            });
+            trackTitle.textContent = prevTrack.title;
+            progressBar.style.width = '0%';
+        }
+
+        // Start updating progress bar
+        function startProgress() {
+            widget.getDuration(function (duration) {
+                setInterval(() => {
+                    widget.getPosition(function (position) {
+                        const progressPercentage = (position / duration) * 100;
+                        progressBar.style.width = `${progressPercentage}%`;
+                    });
+                }, 1000);
+            });
+        }
     </script>
 </body>
 
