--- a/down.html
+++ b/down.html
@@ -4,7 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이미지 다운로드 페이지</title>
+    <meta name="description" content="행운 가득 배경화면 써보세요">
+    <meta name="keywords" content="럭키스팟, 행운 메시지, 운세, 럭키스팟, 오늘의 운세, 긍정적인 메시지">
+    <meta name="author" content="카페 럭키스팟">
+    <meta property="og:title" content="럭키스팟 - 오늘의 행운 메시지 뽑기">
+    <meta property="og:description" content="행운 메시지 뽑고 긍정적인 하루 시작!">
+    <meta property="og:image" content="og-thumb.png">
+    <meta property="og:url" content="https://luckyspotdraw.online">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="럭키스팟 - 스마트폰 배경화면 다운로드">
+    <meta name="twitter:description" content="행운 가득 배경화면 써보세요">
+    <meta name="twitter:image" content="og-thumb.png">
+    <title>럭키스팟 - 스마트폰 배경화면 다운로드</title>
     <style>
         body {
             margin: 0;
@@ -190,12 +202,17 @@
 
         <!-- Sticky 하단 네비게이션 바 -->
         <div class="nav-bar">
-            <a href="down.html" target="_self">
-                <i class="fa-solid fa-circle-arrow-down" alt="nav-icon"></i> 배경화면 다운
-            </a>
-            <a href="index.html" target="_self">
-                <i class="fa-solid fa-gift" alt="nav-icon"></i> 매일 행운뽑기
-            </a>
+            <div class="nav-bar">
+                <a href="down.html" target="_self">
+                    <i class="fa-solid fa-circle-arrow-down" alt="nav-icon"></i> 배경다운
+                </a>
+                <a href="index.html" target="_self">
+                    <i class="fa-solid fa-gift" alt="nav-icon"></i> 행운뽑기
+                </a>
+                <a href="music.html" target="_self">
+                    <i class="fa-solid fa-gift" alt="nav-icon"></i> 음악듣기
+                </a>
+            </div>
         </div>
 
         <!--우측 상단 플로팅 ic. 외부로 이동-->
