--- a/index.html
+++ b/index.html
@@ -267,6 +267,16 @@
 
             color: #33C6FF;
         }
+
+        .black-hole {
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(circle, #000000, #2d2d4f, #000000);
+            border-radius: 50%;
+            box-shadow: 0 0 50px rgba(0, 0, 0, 0.9), 0 0 150px rgba(10, 10, 30, 0.7);
+            animation: spin 10s linear infinite;
+        }
     </style>
 </head>
 
@@ -282,12 +292,17 @@
     <div id="fortuneResult"></div>
 
     <div class="nav-bar">
-        <a href="down.html" target="_self">
-            <i class="fa-solid fa-circle-arrow-down" alt="nav-icon"></i> 배경화면 다운
-        </a>
-        <a href="index.html" target="_self">
-            <i class="fa-solid fa-gift" alt="nav-icon"></i> 매일 행운뽑기
-        </a>
+        <div class="nav-bar">
+            <a href="down.html" target="_self">
+                <i class="fa-solid fa-circle-arrow-down" alt="nav-icon"></i> 배경다운
+            </a>
+            <a href="index.html" target="_self">
+                <i class="fa-solid fa-gift" alt="nav-icon"></i> 행운뽑기
+            </a>
+            <a href="music.html" target="_self">
+                <i class="fa-solid fa-gift" alt="nav-icon"></i> 음악듣기
+            </a>
+        </div>
     </div>
 
     <!--우측 상단 플로팅 ic. 외부로 이동-->
