--- a/down.html
+++ b/down.html
@@ -178,6 +178,7 @@
 </head>
 
 <body>
+    <div id="nav-placeholder"></div>
     <div class="wrapper">
         <h2>이미지를 1초 정도 꾹~</h2>
         <h3>눌러도 다운로드 가능해요</h3>
@@ -220,7 +221,27 @@
             <img id="instagramImage" src="Name=logoInstagram.svg" alt="instagramImage"></a>
         <a href="https://www.luckyspot.in" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
             <img id="blogImage" src="Name=home.svg" alt="Blog Icon"></a>
+        
+        
+        <script>
+            // JavaScript to load the navigation bar component
+            fetch('component-nav.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('nav-placeholder').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading nav component:', error));
+        </script>
+
 
 </body>
+
+// JavaScript to load the navigation bar component
+fetch('component-nav.html')
+.then(response => response.text())
+.then(data => {
+document.getElementById('nav-placeholder').innerHTML = data;
+})
+.catch(error => console.error('Error loading nav component:', error));
 
 </html>
