--- a/down.html
+++ b/down.html
@@ -133,6 +133,22 @@
             color: #33C6FF;
         }
 
+        .nav-placeholder {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 60px;
+            background-color: #333;
+            color: white;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            padding: 10px 0px;
+            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+            z-index: 100;
+        }
+
         /* 푸터 아이콘 스타일 */
         #instagramImage {
             position: fixed;
@@ -235,13 +251,4 @@
 
 
 </body>
-
-// JavaScript to load the navigation bar component
-fetch('component-nav.html')
-.then(response => response.text())
-.then(data => {
-document.getElementById('nav-placeholder').innerHTML = data;
-})
-.catch(error => console.error('Error loading nav component:', error));
-
 </html>
