--- a/music.html
+++ b/music.html
@@ -380,6 +380,16 @@
                 }, 1000);
             });
         }
+
+            // JavaScript to load the navigation bar component
+            fetch('component-nav.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('nav-placeholder').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading nav component:', error));
+
+
     </script>
 </body>
 
