--- a/index.html
+++ b/index.html
@@ -609,6 +609,14 @@
         initCanvas();
         createStars();
         animate();
+
+            // JavaScript to load the navigation bar component
+            fetch('component-nav.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('nav-placeholder').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading nav component:', error));
     </script>
 </body>
 
