--- a/down.html
+++ b/down.html
@@ -29,7 +29,6 @@
             text-align: center;
             flex-direction: column;
             padding-bottom: 60px;
-            /* Sticky Bar와 겹치지 않도록 여백 */
         }
 
         .wrapper {
@@ -100,20 +99,19 @@
             background-color: #0e5b78;
         }
 
-        /* Sticky 하단 네비게이션 바 스타일 */
         .nav-bar {
             position: fixed;
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 60px;
+            height: 70px;
+            /* 고정 높이 */
             background-color: #333;
             color: white;
             display: flex;
             justify-content: space-around;
             align-items: center;
-            padding: 10px 0px;
-            box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+            padding: 10;
             z-index: 100;
         }
 
@@ -122,11 +120,13 @@
             text-decoration: none;
             font-size: 1rem;
             font-weight: 500;
+            line-height: 40px;
             display: flex;
             align-items: center;
-            gap: 8px;
+            margin: 0 8px;
             transition: color 0.3s ease;
         }
+
 
         .nav-bar a:hover {
 
@@ -149,7 +149,6 @@
             z-index: 100;
         }
 
-        /* 푸터 아이콘 스타일 */
         #instagramImage {
             position: fixed;
             background-color: #d9d9d9;
@@ -196,8 +195,7 @@
 <body>
     <div id="nav-placeholder"></div>
     <div class="wrapper">
-        <h2>이미지를 1초 정도 꾹~</h2>
-        <h3>눌러도 다운로드 가능해요</h3>
+        <h2>이미지를 1초 정도 꾹~<br>눌러도 다운로드 가능해요<br></h2>
         <div class="container">
             <!-- 첫 번째 콘텐츠 -->
             <div class="card">
@@ -232,33 +230,24 @@
             </div>
         </div>
 
-        <!--우측 상단 플로팅 ic. 외부로 이동-->
         <a href="https://www.instagram.com/luckyspot.kr" onclick="window.open(this.href, '_blank'); return false;">
             <img id="instagramImage" src="Name=logoInstagram.svg" alt="instagramImage"></a>
         <a href="https://www.luckyspot.in" target="_blank" onclick="window.open(this.href, '_blank'); return false;">
             <img id="blogImage" src="Name=home.svg" alt="Blog Icon"></a>
-        
-        
-        <script>
- // Navigation Fetch
-        // JavaScript to load the navigation bar component
-        const navUrl = location.hostname === "localhost"
-            ? 'component-nav.html' // 로컬 환경에서 상대 경로
-            : 'https://oscar-kwon.github.io/component-nav.html'; // 배포 환경에서 절대 경로
 
-        fetch(navUrl)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Failed to load component-nav.html');
-                }
-                return response.text();
-            })
-            .then(data => {
-                document.getElementById('nav-placeholder').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading nav component:', error));
+
+        <script>
+            // JavaScript to load the navigation bar component
+            /*테스트용*/
+            fetch('component-nav.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('nav-placeholder').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading nav component:', error));
         </script>
 
 
 </body>
+
 </html>
